test/resources/typer/failing/CallError1.scala
object Call {
    def f(a: Int): Int = {
        a * 2
    }
    f("abc")
}